--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "type": "module",
   "version": "2.0.2",
   "homepage": "https://web-check.xyz",
+  "main": "electron.js",
   "scripts": {
     "start": "node server",
     "start-pm": "pm2 start server.js -i max",
     "build": "astro check && astro build",
+    "electron": "electron .",
+    "electron-dev": "concurrently -c magenta,cyan -n backend,electron 'yarn dev:api' 'wait-on http://localhost:3001 && electron .'",
+    "dist": "yarn build && electron-builder",
     "dev:vercel": "PLATFORM='vercel' npx vercel dev",
     "dev:netlify": "PLATFORM='netlify' npx netlify dev",
     "dev:api": "DISABLE_GUI='true' PORT='3001' nodemon server",
@@ -67,7 +71,34 @@
     "@astrojs/ts-plugin": "^1.6.1",
     "@astrojs/vercel": "^7.5.4",
     "concurrently": "^8.2.2",
+    "electron": "^28.0.0",
+    "electron-builder": "^24.0.0",
     "nodemon": "^3.1.0",
+    "wait-on": "^7.2.0",
     "sass": "^1.77.1"
+  },
+  "build": {
+    "appId": "xyz.web-check",
+    "productName": "Web Check",
+    "directories": {
+      "output": "dist-electron"
+    },
+    "files": [
+      "dist",
+      "server.js",
+      "api",
+      "electron.js",
+      "node_modules",
+      "package.json"
+    ],
+    "win": {
+      "target": "nsis"
+    },
+    "mac": {
+      "target": "dmg"
+    },
+    "linux": {
+      "target": "AppImage"
+    }
   }
 }
