ci(build): restrict desktop build to windows only
Remove matrix strategy for multiple OS builds, focusing solely on Windows to simplify CI pipeline. Artifact name updated accordingly.

--- a/.github/workflows/build-desktop.yml
+++ b/.github/workflows/build-desktop.yml
@@ -9,11 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [windows-latest, macos-latest, ubuntu-latest]
+    runs-on: windows-latest
 
     steps:
     - name: Checkout code
@@ -39,5 +35,5 @@ jobs:
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: web-check-${{ matrix.os }}
+        name: web-check-windows
         path: dist-electron/*
